--- a/Views/Menu/Menu_Soda.cshtml
+++ b/Views/Menu/Menu_Soda.cshtml
@@ -4,7 +4,38 @@
 
 @model IEnumerable<WebsiteF4.Models.Menu>
 
-<link rel="stylesheet" href="css.css"
+<link rel="stylesheet" href="~/css/css.css" />
+<!--Link nav-->
+<link rel="stylesheet" href="~/css/stylet.css">
+<link rel="stylesheet" href="~/css/style.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
+<!--Nav header-->
+<nav class="navbar navbar-expand-md navbar-light sticky-top" style="padding:0; margin:0;width:100%;">
+    <div class="container-fluid navigation-bar">
+        <a class="navbar-brand" href="#">
+            <h4 style="font-family: Comic Sans MS, cursive, sans-serif; font-weight: 600;">Fassy<span style="color: antiquewhite;">Kitchen</span></h4>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hello">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="hello">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link btn btn-lg m-3 text-dark " type="button" href="#" style="font-family: 'Comic Sans MS'; border-radius: 50px; border-color: #909971; background-color: #D8E1D8;">Menu</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-lg m-3 text-dark " type="button" href="#" style="font-family: 'Comic Sans MS'; border-radius: 50px; border-color: #909971; background-color: #D8E1D8;">Categories</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-lg m-3 text-dark " type="button" href="#" style="font-family: 'Comic Sans MS'; border-radius: 50px; border-color: #909971; background-color: #D8E1D8;">Order</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-lg m-3 text-dark " type="button" href="#" style="font-family: 'Comic Sans MS'; border-radius: 50px; border-color: #909971; background-color: #D8E1D8;">Our story</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-lg m-3 text-dark " type="button" asp-controller="Account" asp-action="Index" style="font-family: 'Comic Sans MS'; border-radius: 50px; border-color: #909971; background-color: #D8E1D8;">Login Admin</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <!-- Thanh tìm kiếm -->
 <div class="container h-100 ">
     <div class="d-flex justify-content-center h-100 ">
@@ -16,91 +47,121 @@
 </div>
 <br>
 <br>
-<!-- Thanh category -->
-<div class="container ">
-    <div class="row ">
-        <div class="col-xs-12 ">
-            <nav>
-                <div class="nav nav-tabs nav-fill " id="nav-tab " role="tablist ">
-                    <a class="nav-item nav-link active " id="nav-home-tab " data-bs-toggle="tab " href="/Menu/Menu_Hamburger " role="tab " aria-controls="nav-home " aria-selected="true ">
-                        <div><img src="~/content/icon/006-fast food.png" alt=" " class=" " height="50 " height="50 "></div>
-                    </a>
-                    <a class="nav-item nav-link " id="nav-profile-tab " data-bs-toggle="tab " href="/Menu/Menu_IceCream " role="tab " aria-controls="nav-profile " aria-selected="false ">
-                        <div><img src="~/content/icon/007-ice cream.png " alt=" " height="50 " height="50 "></div>
-                    </a>
-                    <a class="nav-item nav-link " id="nav-contact-tab " data-bs-toggle="tab " href="/Menu/Menu_Rice" role="tab " aria-controls="nav-contact " aria-selected="false ">
-                        <div><img src="~/content/icon/011-rice.png " alt=" " height="50 " height="50 "></div>
-                    </a>
-                    <a class="nav-item nav-link " id="nav-about-tab " data-bs-toggle="tab " href="/Menu/Menu_Soda " role="tab " aria-controls="nav-about " aria-selected="false ">
-                        <div><img src="~/content/icon/015-martini.png " alt=" " height="50 " height="50 "></div>
-                    </a>
-                </div>
-            </nav>
-            <!-- Liệt kê sản phẩm theo mục -->
-            <div class="tab-content py-3 px-3 px-sm-0 " id="nav-tabContent ">
-                <div class="tab-pane fade show active " id="nav-mon-1 " role="tabpanel" aria-labelledby="nav-home-tab ">
-                    <!-- List sản phẩm -->
-                    <div class="container ">
-                        <div class="row ">
-                            <!-- hinh 1 -->
-                            @foreach (var item in Model)
-                            {
-                                <div class="col-md-3 col-sm-6 ">
-                                    <div class="product-grid3 ">
-                                        <div class="product-image3 ">
-                                            <a href="# ">
-                                                <img class="pic-1 " src="@item.MENU_IMG">
-                                                <img class="pic-2 " src="@item.MENU_IMG">
-                                                <ul class="social ">
-                                                    <li><a href="# "><i class="fas fa-cart-plus"></i></a></li>
-                                                    <li><a href="# "><i class="fas fa-info-circle"></i></a></li>
-                                                </ul>
-                                                <span class="product-new-label ">New</span>
-                                        </div>
-                                        <div class="product-content ">
-                                            <h3 class="title "><a href="# ">@item.MENU_NAME</a></h3>
-                                            <div class="price ">
-                                                @item.MENU_PRICE VNĐ
+<body>
+    <!-- Thanh category -->
+    <div class="container ">
+        <div class="row ">
+            <div class="col-xs-12 ">
+                <nav>
+                    <div class="nav nav-tabs nav-fill " id="nav-tab " role="tablist">
+                        <a class="nav-item nav-link active " id="nav-home-tab " data-bs-toggle="tab " href="/Menu/Menu_FastFood " role="tab" aria-controls="nav-home " aria-selected="false">
+                            <div><img src="~/content/icon/006-fast food.png" alt=" " class=" " height="50 "></div>
+                        </a>
+                        <a class="nav-item nav-link " id="nav-profile-tab " data-bs-toggle="tab " href="/Menu/Menu_IceCream " role="tab" aria-controls="nav-profile " aria-selected="false">
+                            <div><img src="~/content/icon/007-ice cream.png " alt=" " height="50"></div>
+                        </a>
+                        <a class="nav-item nav-link " id="nav-contact-tab " data-bs-toggle="tab " href="/Menu/Menu_Fruit" role="tab" aria-controls="nav-contact " aria-selected="false">
+                            <div><img src="~/content/icon/046-avocado.png" alt=" " height="50 "></div>
+                        </a>
+                        <a class="nav-item nav-link " id="nav-about-tab " data-bs-toggle="tab " href="/Menu/Menu_Soda " role="tab" aria-controls="nav-about " aria-selected="true">
+                            <div><img src="~/content/icon/015-martini.png " alt=" " height="50 "></div>
+                        </a>
+                    </div>
+                </nav>
+                <!-- Liệt kê sản phẩm theo mục -->
+                <div class="tab-content py-3 px-3 px-sm-0 " id="nav-tabContent ">
+                    <div class="tab-pane fade show active " id="nav-mon-1 " role="tabpanel" aria-labelledby="nav-home-tab ">
+                        <!-- List sản phẩm -->
+                        <div class="container ">
+                            <div class="row ">
+                                <!-- hinh 1 -->
+                                @foreach (var item in Model)
+                                {
+                                    <div class="col-md-3 col-sm-6 ">
+                                        <div class="product-grid3 ">
+                                            <div class="product-image3 ">
+                                                <a href="# ">
+                                                    <img class="pic-1 " src="@item.MENU_IMG">
+                                                    <img class="pic-2 " src="@item.MENU_IMG">
+                                                    <ul class="social ">
+                                                        <li><a href="# "><i class="fas fa-cart-plus"></i></a></li>
+                                                        <li><a href="# "><i class="fas fa-info-circle"></i></a></li>
+                                                    </ul>
+                                                    <span class="product-new-label ">New</span>
                                             </div>
-                                            <ul class="rating ">
-                                                <li class="fas fa-star "></li>
-                                                <li class="fas fa-star "></li>
-                                                <li class="fas fa-star "></li>
-                                                <li class="fas fa-star disable "></li>
-                                                <li class="fas fa-star disable "></li>
-                                            </ul>
+                                            <div class="product-content ">
+                                                <h3 class="title "><a href="# ">@item.MENU_NAME</a></h3>
+                                                <div class="price ">
+                                                    @item.MENU_PRICE VNĐ
+                                                </div>
+                                                <ul class="rating ">
+                                                    <li class="fas fa-star "></li>
+                                                    <li class="fas fa-star "></li>
+                                                    <li class="fas fa-star "></li>
+                                                    <li class="fas fa-star disable "></li>
+                                                    <li class="fas fa-star disable "></li>
+                                                </ul>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            }
+                                }
 
 
-                            <!-- hinh 1.// -->
+                                <!-- hinh 1.// -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <hr>
+            <!-- footer -->
+            <div class="footer-distributed" style="bottom: 0; left: 0; position: fixed; width: 100%;">
 
-        <!-- Chuyển trang 1,2,3 -->
-        @*<nav aria-label="Page navigation example ">
-                <ul class="pagination justify-content-center ">
-                    <li class="page-item ">
-                        <a class="page-link " href="#" aria-label="Previous ">
-                            <span aria-hidden="true">«</span>
-                            <span class="sr-only ">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active "><a class="page-link " href="# ">1</a></li>
-                    <li class="page-item "><a class="page-link " href="# ">2</a></li>
-                    <li class="page-item "><a class="page-link " href="# ">3</a></li>
-                    <li class="page-item ">
-                        <a class="page-link " href="# " aria-label="Next ">
-                            <span aria-hidden="true ">»</span>
-                            <span class="sr-only ">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>*@
-        <!-- Kết thúc chuyển trang    -->
-        <hr>
+                <div class="footer-left">
+
+                    <p class="footer-company-name"><h3>Fassy<span>Kitchen</span></h3></p>
+
+                    <p class="footer-links">
+                        <a href="#" class="link-1">Home</a>
+
+                        <a href="#">Menu</a>
+
+                        <a href="#">Category</a>
+
+                        <a href="#">Order</a>
+
+                        <a href="#">Calories</a>
+                    </p>
+
+                </div>
+
+                <div class="footer-center">
+
+                    <div>
+                        <i class="fa fa-map-marker"></i>
+                        <p><span>KP6, phường Linh Trung</span> Trường ĐH CNTT, quận Thủ Đức, TP. Hồ Chí Minh</p>
+                    </div>
+
+                    <div>
+                        <i class="fa fa-phone"></i>
+                        <p>+1.555.555.5555</p>
+                    </div>
+
+                    <div>
+                        <i class="fa fa-envelope"></i>
+                        <p><a href="mailto:17521063@gm.uit.edu.vn">17521063@gm.uit.edu.vn</a></p>
+                    </div>
+
+                </div>
+
+                <div class="footer-right">
+
+                    <p class="footer-company-about">
+                        <span>About the restaurant</span>
+                        Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                    </p>
+
+                </div>
+
+            </div>
+</body>
