--- a/wwwroot/css/chitietsanpham.css
+++ b/wwwroot/css/chitietsanpham.css
@@ -1,320 +1,200 @@
-.gallery-wrap .img-big-wrap img {
-    height: 450px;
-    width: 450px;
-    display: inline-block;
-    cursor: zoom-in;
+/* ----- Global ----- */
+* {
+    box-sizing: border-box;
 }
 
-.gallery-wrap .img-small-wrap .item-gallery {
-    width: 60px;
-    height: 60px;
-    border: 1px solid #ddd;
-    margin: 7px 2px;
-    display: inline-block;
-    overflow: hidden;
+html, body {
+    height: 100%;
 }
 
-.gallery-wrap .img-small-wrap {
-    text-align: center;
+body {
+    display: grid;
+    grid-template-rows: 1fr;
+    font-family: "Raleway", sans-serif;
+    background-color: #01e37f;
 }
-.gallery-wrap .img-small-wrap img {
+
+h3 {
+    font-size: 0.7em;
+    letter-spacing: 1.2px;
+    color: #a6a6a6;
+}
+
+img {
     max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-    cursor: zoom-in;
+    filter: drop-shadow(1px 1px 3px #a6a6a6);
+}
+/* ----- Product Section ----- */
+.product {
+    display: grid;
+    grid-template-columns: 0.9fr 1fr;
+    margin: auto;
+    padding: 2.5em 0;
+    min-width: 600px;
+    background-color: white;
+    border-radius: 5px;
+}
+/* ----- Photo Section ----- */
+.product__photo {
+    position: relative;
 }
 
-.price-detail > sub{
-    text-decoration: underline;
-}
-
-
-/* img */
-/* Style the Image Used to Trigger the Modal */
-#myImg {
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-#myImg:hover {opacity: 0.7;}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
-}
-
-
-/* Phần Comment */
-.card-inner{
-    margin-left: 4rem;
-}
-
-/* Phần nhập câu hỏi */
-body{ 
-  background: #fafafa;
-  /* background-image: url("png/bg.png"); */
-}
-.widget-area.blank {
-background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
--webkit-box-shadow: none;
--moz-box-shadow: none;
--ms-box-shadow: none;
--o-box-shadow: none;
-box-shadow: none;
-}
-body .no-padding {
-padding: 0;
-}
-.widget-area {
-background-color: #fff;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
--o-border-radius: 4px;
-border-radius: 4px;
--webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
--moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
--ms-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
--o-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-float: left;
-margin-top: 30px;
-padding: 25px 30px;
-position: relative;
-width: 100%;
-}
-.status-upload {
-background: none repeat scroll 0 0 #f5f5f5;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
--o-border-radius: 4px;
-border-radius: 4px;
-float: left;
-width: 100%;
-}
-.status-upload form {
-float: left;
-width: 100%;
-}
-.status-upload form textarea {
-background: none repeat scroll 0 0 #fff;
-border: medium none;
--webkit-border-radius: 4px 4px 0 0;
--moz-border-radius: 4px 4px 0 0;
--ms-border-radius: 4px 4px 0 0;
--o-border-radius: 4px 4px 0 0;
-border-radius: 4px 4px 0 0;
-color: #777777;
-float: left;
-font-family: Lato;
-font-size: 14px;
-height: 142px;
-letter-spacing: 0.3px;
-padding: 20px;
-width: 100%;
-resize:vertical;
-outline:none;
-border: 1px solid #F2F2F2;
-}
-
-.status-upload ul {
-float: left;
-list-style: none outside none;
-margin: 0;
-padding: 0 0 0 15px;
-width: auto;
-}
-.status-upload ul > li {
-float: left;
-}
-.status-upload ul > li > a {
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
--o-border-radius: 4px;
-border-radius: 4px;
-color: #777777;
-float: left;
-font-size: 14px;
-height: 30px;
-line-height: 30px;
-margin: 10px 0 10px 10px;
-text-align: center;
--webkit-transition: all 0.4s ease 0s;
--moz-transition: all 0.4s ease 0s;
--ms-transition: all 0.4s ease 0s;
--o-transition: all 0.4s ease 0s;
-transition: all 0.4s ease 0s;
-width: 30px;
-cursor: pointer;
-}
-.status-upload ul > li > a:hover {
-background: none repeat scroll 0 0 #606060;
-color: #fff;
-}
-.status-upload form button {
-border: medium none;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
--o-border-radius: 4px;
-border-radius: 4px;
-color: #fff;
-float: right;
-font-family: Lato;
-font-size: 14px;
-letter-spacing: 0.3px;
-margin-right: 9px;
-margin-top: 9px;
-padding: 6px 15px;
-}
-.dropdown > a > span.green:before {
-border-left-color: #2dcb73;
-}
-.status-upload form button > i {
-margin-right: 7px;
-}
-
-/* Đánh giá SP */
-.reviews{
-  padding: 15px;
-  max-width: 768px;
-  margin: 0 auto;
-}
-
-.review-item{
-  background-color: white;
-  padding: 15px;
-  margin-bottom: 5px;
-  box-shadow: 1px 1px 5px #343a40;
-}
-
-.review-item .review-date{
-  color: #cecece;
-}
-.review-item .review-text{
-  font-size: 16px;
-  font-weight: normal;
-  margin-top: 5px;
-  color: #343a40;
-}
-
-.review-item .reviewer{
-  width: 100px;
-  height: 100px;
-  border: 1px solid #cecece;
-}
-
-/****Rating Stars***/
-.raterater-bg-layer {
-    color: rgba( 0, 0, 0, 0.25 );
-}
-.raterater-hover-layer {
-    color: rgba( 255, 255, 0, 0.75 );
-}
-.raterater-hover-layer.rated { /* after the user selects a rating */
-    color: rgba( 255, 255, 0, 1 );
-}
-.raterater-rating-layer {
-    color: rgba( 255, 155, 0, 0.75 );
-}
-.raterater-outline-layer {
-    color: rgba( 0, 0, 0, 0.25 );
-}
-
-/* don't change these - you might break something.. */
-.raterater-wrapper {
-    overflow:visible;
-}
-
-.software .raterater-wrapper {
-    margin-top: 4px;
-}
-
-.raterater-layer,
-.raterater-layer i {
-    display: block;
+.photo-container {
     position: absolute;
-    overflow: visible;
-    top: 0px;
-    left: 0px;
-}
-.raterater-hover-layer {
-    display: none;
-}
-.raterater-hover-layer i,
-.raterater-rating-layer i {
-    width: 0px;
-    overflow: hidden;
+    left: -2.5em;
+    display: grid;
+    grid-template-rows: 1fr;
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    box-shadow: 4px 4px 25px -2px rgba(0, 0, 0, 0.3);
 }
 
+.photo-main {
+    border-radius: 6px 6px 0 0;
+    background-color: #9be010;
+    background: radial-gradient(#e5f89e, #96e001);
+}
 
+    .photo-main .controls {
+        display: flex;
+        justify-content: space-between;
+        padding: 0.8em;
+        color: #fff;
+    }
+
+        .photo-main .controls i {
+            cursor: pointer;
+        }
+
+    .photo-main img {
+        position: absolute;
+        left: -3.5em;
+        top: 2em;
+        max-width: 110%;
+        filter: saturate(150%) contrast(120%) hue-rotate(10deg) drop-shadow(1px 20px 10px rgba(0, 0, 0, 0.3));
+    }
+
+.photo-album {
+    padding: 0.7em 1em;
+    border-radius: 0 0 6px 6px;
+    background-color: #fff;
+}
+
+    .photo-album ul {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .photo-album li {
+        float: left;
+        width: 55px;
+        height: 55px;
+        padding: 7px;
+        border: 1px solid #a6a6a6;
+        border-radius: 3px;
+    }
+/* ----- Informations Section ----- */
+.product__info {
+    padding: 0.8em 0;
+}
+
+.title h1 {
+    margin-bottom: 0.1em;
+    color: #4c4c4c;
+    font-size: 1.5em;
+    font-weight: 900;
+}
+
+.title span {
+    font-size: 0.7em;
+    color: #a6a6a6;
+}
+
+.price {
+    margin: 1.5em 0;
+    color: #ff3f40;
+    font-size: 1.2em;
+}
+
+    .price span {
+        padding-left: 0.15em;
+        font-size: 2.9em;
+    }
+
+.variant {
+    overflow: auto;
+}
+
+    .variant h3 {
+        margin-bottom: 1.1em;
+    }
+
+    .variant li {
+        float: left;
+        width: 35px;
+        height: 35px;
+        padding: 3px;
+        border: 1px solid transparent;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+        .variant li:first-child, .variant li:hover {
+            border: 1px solid #a6a6a6;
+        }
+
+        .variant li:not(:first-child) {
+            margin-left: 0.1em;
+        }
+
+.description {
+    clear: left;
+    margin: 2em 0;
+}
+
+    .description h3 {
+        margin-bottom: 1em;
+    }
+
+    .description ul {
+        font-size: 0.8em;
+        list-style: disc;
+        margin-left: 1em;
+    }
+
+    .description li {
+        text-indent: -0.6em;
+        margin-bottom: 0.5em;
+    }
+
+.buy--btn {
+    padding: 1.5em 3.1em;
+    border: none;
+    border-radius: 7px;
+    font-size: 0.8em;
+    font-weight: 700;
+    letter-spacing: 1.3px;
+    color: #fff;
+    background-color: #ff3f40;
+    box-shadow: 2px 2px 25px -7px #4c4c4c;
+    cursor: pointer;
+}
+
+    .buy--btn:active {
+        transform: scale(0.97);
+    }
+/* ----- Footer Section ----- */
+footer {
+    padding: 1em;
+    text-align: center;
+    color: #fff;
+}
+
+    footer a {
+        color: #4c4c4c;
+    }
+
+        footer a:hover {
+            color: #ff3f40;
+        }
