--- a/wwwroot/css/order.css
+++ b/wwwroot/css/order.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿﻿body
+{
     /*padding: 0;
     margin: 0;*/
     min-height: 100vh;
@@ -6,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url("/Content/Content/images/brooke-lark-wMzx2nBdeng-unsplash.jpg") no-repeat center center fixed;
+    background: url("/content/image/jpg/brooke-lark-wMzx2nBdeng-unsplash.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -30,27 +31,32 @@
     color: white;
     font-family: Comic Sans MS, cursive, sans-serif;
 }
+
 .form-group {
     flex-direction: row;
 }
-.form-group label {
-    font-family: 'Dancing Script', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 54px;
-    color: #398F53;
-}
+
+    .form-group label {
+        font-family: 'Dancing Script', cursive;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 54px;
+        color: #398F53;
+    }
+
 th {
     font-family: Comic Sans MS, cursive, sans-serif;
     font-size: 20px;
     width: 300px;
-    text-align:center;
+    text-align: center;
 }
+
 tr {
     width: 700px;
     height: 30px;
 }
+
 table {
-    margin:30px;
+    margin: 30px;
 }
