--- a/wwwroot/css/order2.css
+++ b/wwwroot/css/order2.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿﻿body {
     padding: 0;
     margin: 0;
     min-height: 100vh;
@@ -33,27 +33,32 @@
 .form-group {
     flex-direction: row;
 }
-.form-group label {
-    font-family: 'Dancing Script', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 54px;
-    color: #398F53;
-}
+
+    .form-group label {
+        font-family: 'Dancing Script', cursive;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 54px;
+        color: #398F53;
+    }
+
 th {
     font-family: Comic Sans MS, cursive, sans-serif;
     font-size: 20px;
     width: 300px;
-    text-align:center;
+    text-align: center;
 }
+
 tr {
     width: 700px;
     height: 30px;
 }
+
 table {
-    margin:30px;
+    margin: 30px;
 }
+
 div input {
     height: 50px;
     width: 300px;
