--- a/Views/Menu/Menu_Soda.cshtml
+++ b/Views/Menu/Menu_Soda.cshtml
@@ -15,7 +15,7 @@
 <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
 <!--Nav header-->
-<nav class="navbar navbar-expand-md navbar-light sticky-top" style="padding:0; margin:0;width:100%;">
+@*<nav class="navbar navbar-expand-md navbar-light sticky-top" style="padding:0; margin:0;width:100%;">
     <div class="container-fluid navigation-bar">
         <a class="navbar-brand" href="#">
             <h4 style="font-family: Comic Sans MS, cursive, sans-serif; font-weight: 600;">Fassy<span style="color: antiquewhite;">Kitchen</span></h4>
@@ -35,9 +35,9 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav>*@
 <!-- Thanh tìm kiếm -->
-<div class="container h-100 ">
+<div class="container h-100 mt-3 ">
     <div class="d-flex justify-content-center h-100 ">
         <div class="searchbar ">
             <input class="search_input " type="text" name=" " placeholder="Search... ">
@@ -47,7 +47,7 @@
 </div>
 <br>
 <br>
-<body>
+
     <!-- Thanh category -->
     <div class="container ">
         <div class="row ">
@@ -115,7 +115,7 @@
             </div>
             <hr>
             <!-- footer -->
-            <div class="footer-distributed" style="bottom: 0; left: 0; position: fixed; width: 100%;">
+            <!--<div class="footer-distributed" style="bottom: 0; left: 0; position: fixed; width: 100%;">
 
                 <div class="footer-left">
 
@@ -163,5 +163,5 @@
 
                 </div>
 
-            </div>
-</body>
+            </div>-->
+
