--- a/Views/Shared/navFooter.cshtml
+++ b/Views/Shared/navFooter.cshtml
@@ -10,6 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link rel="stylesheet" href="/css/chitietsanpham_Q.css">
+    <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-free/css/brands.min.css">
+    <link rel="stylesheet" href="fontawesome-free/css/fontawesome.min.css">
+    <link rel="stylesheet" href="fontawesome-free/css/regular.min.css">
+    <link rel="stylesheet" href="fontawesome-free/css/solid.min.css">
+    <link rel="stylesheet" href="fontawesome-free/css/svg-with-js.min.css">
+    <link rel="stylesheet" href="fontawesome-free/css/v4-shims.min.css">
 </head>
 
 <body>
