--- a/wwwroot/css/css.css
+++ b/wwwroot/css/css.css
@@ -1,11 +1,11 @@
 /* Thanh tìm kiếm */
-body,html{
+body, html {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
-    background: #e74c3c !important;
-    }
+    background: #F7F8F1;
+}
 
 .searchbar {
     margin-bottom: auto;
