--- a/Views/Menu/Menu_IceCream.cshtml
+++ b/Views/Menu/Menu_IceCream.cshtml
@@ -13,7 +13,7 @@
 <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
 <!--Nav header-->
-<nav class="navbar navbar-expand-md navbar-light sticky-top" style="padding:0; margin:0;width:100%;">
+@*<nav class="navbar navbar-expand-md navbar-light sticky-top" style="padding:0; margin:0;width:100%;">
     <div class="container-fluid navigation-bar">
         <a class="navbar-brand" href="#">
             <h4 style="font-family: Comic Sans MS, cursive, sans-serif; font-weight: 600;">Fassy<span style="color: antiquewhite;">Kitchen</span></h4>
@@ -33,10 +33,10 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav>*@
 
 <!-- Thanh tìm kiếm -->
-<div class="container h-100 ">
+<div class="container h-100 mt-3">
     <div class="d-flex justify-content-center h-100">
         <div class="searchbar">
             <input class="search_input" type="text" name=" " placeholder="Search...">
@@ -137,53 +137,3 @@
     </nav>*@
 <!-- Kết thúc chuyển trang    -->
 <hr />
-<!-- footer -->
-<div class="footer-distributed" style="bottom: 0; left: 0; position: fixed; width: 100%;">
-
-    <div class="footer-left">
-
-        <p class="footer-company-name"><h3>Fassy<span>Kitchen</span></h3></p>
-
-        <p class="footer-links">
-            <a href="#" class="link-1">Home</a>
-
-            <a href="#">Menu</a>
-
-            <a href="#">Category</a>
-
-            <a href="#">Order</a>
-
-            <a href="#">Calories</a>
-        </p>
-
-    </div>
-
-    <div class="footer-center">
-
-        <div>
-            <i class="fa fa-map-marker"></i>
-            <p><span>KP6, phường Linh Trung</span> Trường ĐH CNTT, quận Thủ Đức, TP. Hồ Chí Minh</p>
-        </div>
-
-        <div>
-            <i class="fa fa-phone"></i>
-            <p>+1.555.555.5555</p>
-        </div>
-
-        <div>
-            <i class="fa fa-envelope"></i>
-            <p><a href="mailto:17521063@gm.uit.edu.vn">17521063@gm.uit.edu.vn</a></p>
-        </div>
-
-    </div>
-
-    <div class="footer-right">
-
-        <p class="footer-company-about">
-            <span>About the restaurant</span>
-            Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-        </p>
-
-    </div>
-
-</div>
