--- a/wwwroot/css/chitietsanpham_Q.css
+++ b/wwwroot/css/chitietsanpham_Q.css
@@ -1,345 +1,177 @@
-﻿.gallery-wrap .img-big-wrap img {
-    height: 450px;
-    width: 450px;
-    display: inline-block;
-    cursor: zoom-in;
-}
+﻿/*****************globals*************/
 
-.gallery-wrap .img-small-wrap .item-gallery {
-    width: 60px;
-    height: 60px;
-    border: 1px solid #ddd;
-    margin: 7px 2px;
-    display: inline-block;
-    overflow: hidden;
-}
-
-.gallery-wrap .img-small-wrap {
-    text-align: center;
-}
-
-    .gallery-wrap .img-small-wrap img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-        border-radius: 4px;
-        cursor: zoom-in;
-    }
-
-.price-detail > sub {
-    text-decoration: underline;
-}
-
-
-/* img */
-/* Style the Image Used to Trigger the Modal */
-#myImg {
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-    #myImg:hover {
-        opacity: 0.7;
-    }
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-}
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-    from {
-        transform: scale(0)
-    }
-
-    to {
-        transform: scale(1)
-    }
-}
-
-/* The Close Button */
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-    .close:hover,
-    .close:focus {
-        color: #bbb;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px) {
-    .modal-content {
-        width: 100%;
-    }
-}
-
-
-/* Phần Comment */
-.card-inner {
-    margin-left: 4rem;
-}
-
-/* Phần nhập câu hỏi */
 body {
-    background: #fafafa;
-    /* background-image: url("png/bg.png"); */
+    font-family: Ubuntu, sans-serif;
+    overflow-x: hidden;
 }
 
-.widget-area.blank {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -ms-box-shadow: none;
-    -o-box-shadow: none;
-    box-shadow: none;
+img {
+    max-width: 100%;
 }
 
-body .no-padding {
-    padding: 0;
+.preview {
+    display: flex;/
+    flex-direction: column;
 }
 
-.widget-area {
-    background-color: #fff;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-    -ms-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-    -o-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
-    float: left;
-    margin-top: 30px;
-    padding: 25px 30px;
-    position: relative;
-    width: 100%;
+@media screen and (max-width: 996px) {
+    .preview {
+        margin-bottom: 20px;
+    }
 }
 
-.status-upload {
-    background: none repeat scroll 0 0 #f5f5f5;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    border-radius: 4px;
-    float: left;
-    width: 100%;
+.preview-pic {
+    flex-grow: 1;
 }
 
-    .status-upload form {
-        float: left;
-        width: 100%;
+.container > .card {
+    margin-top: 50px;
+    background: #F7F8F1;
+    border-color: #F7F8F1;
+    padding: 3em;
+    line-height: 1.5em;
+    border-radius: 27px;
+}
+
+@media screen and (min-width: 997px) {
+    .wrapper {
+        /* display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox; */
+        display: flex;
+    }
+}
+
+.details {
+    /* display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox; */
+    display: flex;
+    /* -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column; */
+    flex-direction: column;
+}
+
+.colors {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
+
+.product-title, .price, .sizes, .colors, .amount {
+    text-transform: UPPERCASE;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.6;
+}
+
+    .checked, .price span {
+        color: #ff9f1a;
     }
 
-        .status-upload form textarea {
-            background: none repeat scroll 0 0 #fff;
-            border: medium none;
-            -webkit-border-radius: 4px 4px 0 0;
-            -moz-border-radius: 4px 4px 0 0;
-            -ms-border-radius: 4px 4px 0 0;
-            -o-border-radius: 4px 4px 0 0;
-            border-radius: 4px 4px 0 0;
-            color: #777777;
-            float: left;
-            font-family: Lato;
-            font-size: 14px;
-            height: 142px;
-            letter-spacing: 0.3px;
-            padding: 20px;
-            width: 100%;
-            resize: vertical;
-            outline: none;
-            border: 1px solid #F2F2F2;
-        }
+.product-title, .rating, .product-description, .price, .vote, .sizes, .amount {
+    margin-bottom: 25px;
+    line-height: 1.6;
+    font-family: Ubuntu, sans-serif;
+}
 
-    .status-upload ul {
-        float: left;
-        list-style: none outside none;
-        margin: 0;
-        padding: 0 0 0 15px;
-        width: auto;
+.product-title {
+    margin-top: 0;
+    font-size: 30px;
+}
+
+.sizes {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.size:first-of-type {
+    margin-left: 40px;
+}
+
+.color {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    height: 2em;
+    width: 2em;
+    border-radius: 2px;
+}
+
+    .color:first-of-type {
+        margin-left: 20px;
     }
 
-        .status-upload ul > li {
-            float: left;
-        }
+.add-to-cart, .like {
+    background: #ff9f1a;
+    padding: 1.2em 1.5em;
+    border: none;
+    text-transform: UPPERCASE;
+    font-weight: bold;
+    color: #fff;
+    /* -webkit-transition: background .3s ease; */
+    transition: background .3s ease;
+}
 
-            .status-upload ul > li > a {
-                -webkit-border-radius: 4px;
-                -moz-border-radius: 4px;
-                -ms-border-radius: 4px;
-                -o-border-radius: 4px;
-                border-radius: 4px;
-                color: #777777;
-                float: left;
-                font-size: 14px;
-                height: 30px;
-                line-height: 30px;
-                margin: 10px 0 10px 10px;
-                text-align: center;
-                -webkit-transition: all 0.4s ease 0s;
-                -moz-transition: all 0.4s ease 0s;
-                -ms-transition: all 0.4s ease 0s;
-                -o-transition: all 0.4s ease 0s;
-                transition: all 0.4s ease 0s;
-                width: 30px;
-                cursor: pointer;
-            }
-
-                .status-upload ul > li > a:hover {
-                    background: none repeat scroll 0 0 #606060;
-                    color: #fff;
-                }
-
-    .status-upload form button {
-        border: medium none;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
-        -ms-border-radius: 4px;
-        -o-border-radius: 4px;
-        border-radius: 4px;
+    .add-to-cart:hover, .like:hover {
+        background: #b36800;
         color: #fff;
-        float: right;
-        font-family: Lato;
-        font-size: 14px;
-        letter-spacing: 0.3px;
-        margin-right: 9px;
-        margin-top: 9px;
-        padding: 6px 15px;
     }
 
-.dropdown > a > span.green:before {
-    border-left-color: #2dcb73;
+.not-available {
+    text-align: center;
+    line-height: 2em;
 }
 
-.status-upload form button > i {
-    margin-right: 7px;
-}
-
-/* Đánh giá SP */
-.reviews {
-    padding: 15px;
-    max-width: 768px;
-    margin: 0 auto;
-}
-
-.review-item {
-    background-color: white;
-    padding: 15px;
-    margin-bottom: 5px;
-    box-shadow: 1px 1px 5px #343a40;
-}
-
-    .review-item .review-date {
-        color: #cecece;
+    .not-available:before {
+        font-family: fontawesome;
+        content: "\f00d";
+        color: #fff;
     }
 
-    .review-item .review-text {
-        font-size: 16px;
-        font-weight: normal;
-        margin-top: 5px;
-        color: #343a40;
+.orange {
+    background: #ff9f1a;
+}
+
+.green {
+    background: #85ad00;
+}
+
+.blue {
+    background: #0076ad;
+}
+
+.tooltip-inner {
+    padding: 1.3em;
+}
+
+@-webkit-keyframes opacity {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(3);
+        transform: scale(3);
     }
 
-    .review-item .reviewer {
-        width: 100px;
-        height: 100px;
-        border: 1px solid #cecece;
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes opacity {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(3);
+        transform: scale(3);
     }
 
-/****Rating Stars***/
-.raterater-bg-layer {
-    color: rgba( 0, 0, 0, 0.25 );
-}
-
-.raterater-hover-layer {
-    color: rgba( 255, 255, 0, 0.75 );
-}
-
-    .raterater-hover-layer.rated { /* after the user selects a rating */
-        color: rgba( 255, 255, 0, 1 );
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        transform: scale(1);
     }
-
-.raterater-rating-layer {
-    color: rgba( 255, 155, 0, 0.75 );
 }
-
-.raterater-outline-layer {
-    color: rgba( 0, 0, 0, 0.25 );
-}
-
-/* don't change these - you might break something.. */
-.raterater-wrapper {
-    overflow: visible;
-}
-
-.software .raterater-wrapper {
-    margin-top: 4px;
-}
-
-.raterater-layer,
-.raterater-layer i {
-    display: block;
-    position: absolute;
-    overflow: visible;
-    top: 0px;
-    left: 0px;
-}
-
-.raterater-hover-layer {
-    display: none;
-}
-
-    .raterater-hover-layer i,
-    .raterater-rating-layer i {
-        width: 0px;
-        overflow: hidden;
-    }
