--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -4,26 +4,14 @@
     font-family: Open Sans;
 }
 
-section {
-    width: 100%;
-    display: inline-block;
-    background: #333;
-    height: 50vh;
-    text-align: center;
-    font-size: 22px;
-    font-weight: 700;
-    text-decoration: underline;
-}
-
 .footer-distributed {
-    position: fixed;
-    background: #666;
+    background-color: #666;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
     text-align: left;
     font: bold 16px sans-serif;
-    padding: 55px 50px;
+    /* padding: 55px 50px; */
     bottom: 0;
     left: 0;
 }
@@ -34,13 +22,11 @@ section {
         display: inline-block;
         vertical-align: top;
     }
-
     /* Footer left */
 
     .footer-distributed .footer-left {
         width: 40%;
     }
-
     /* The company logo */
 
     .footer-distributed h3 {
@@ -52,22 +38,20 @@ section {
         .footer-distributed h3 span {
             color: lightseagreen;
         }
-
     /* Footer links */
-
-    .footer-distributed .footer-links {
+    /* .footer-distributed .footer-links {
         color: #ffffff;
         margin: 20px 0 12px;
         padding: 0;
     }
-
-        .footer-distributed .footer-links a {
-            display: inline-block;
-            line-height: 1.8;
-            font-weight: 400;
-            text-decoration: none;
-            color: inherit;
-        }
+    
+    .footer-distributed .footer-links a {
+        display: inline-block;
+        line-height: 1.8;
+        font-weight: 400;
+        text-decoration: none;
+        color: inherit;
+    } */
 
     .footer-distributed .footer-company-name {
         color: #222;
@@ -75,11 +59,10 @@ section {
         font-weight: normal;
         margin: 0;
     }
-
     /* Footer Center */
 
     .footer-distributed .footer-center {
-        width: 35%;
+        width: 30%;
     }
 
         .footer-distributed .footer-center i {
@@ -91,7 +74,7 @@ section {
             border-radius: 50%;
             text-align: center;
             line-height: 42px;
-            margin: 10px 15px;
+            /* margin: 10px 15px; */
             vertical-align: middle;
         }
 
@@ -119,8 +102,7 @@ section {
                 color: lightseagreen;
                 text-decoration: none;
             }
-
-    .footer-distributed .footer-links a:before {
+    /* .footer-distributed .footer-links a:before {
         content: "|";
         font-weight: 300;
         font-size: 20px;
@@ -129,32 +111,23 @@ section {
         display: inline-block;
         padding-right: 5px;
     }
-
+    
     .footer-distributed .footer-links .link-1:before {
         content: none;
-    }
-
+    } */
     /* Footer Right */
 
     .footer-distributed .footer-right {
         width: 20%;
     }
 
-    .footer-distributed .footer-company-about {
-        line-height: 20px;
-        color: #92999f;
-        font-size: 13px;
-        font-weight: normal;
-        margin: 0;
+    .footer-distributed .footer-company-about span {
+        display: block;
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: bold;
+        margin-bottom: 20px;
     }
-
-        .footer-distributed .footer-company-about span {
-            display: block;
-            color: #ffffff;
-            font-size: 14px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
 
     .footer-distributed .footer-icons {
         margin-top: 25px;
@@ -174,11 +147,9 @@ section {
             margin-right: 3px;
             margin-bottom: 5px;
         }
-
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 880px) {
-
     .footer-distributed {
         font: bold 14px sans-serif;
     }
@@ -188,7 +159,7 @@ section {
         .footer-distributed .footer-right {
             display: block;
             width: 100%;
-            margin-bottom: 40px;
+            /* margin-bottom: 40px;*/
             text-align: center;
         }
 
