sửa phần đầu order1, order2

--- a/Views/Order/Order1.cshtml
+++ b/Views/Order/Order1.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ Layout = "navFooter";}
 
 <link rel="stylesheet" href="~/css/order.css">
-<div class="container" >
+<div class="container mt-lg-5" >
     
         <form class="form-container">
             <p><center>ORDER DETAIL</center></p>
