--- a/Views/Order/Order2.cshtml
+++ b/Views/Order/Order2.cshtml
@@ -1,31 +1,33 @@
 ﻿@{ Layout = "navFooter";}
 <link rel="stylesheet" href="~/css/order2.css">
 
-<section class="col-12 col-sm-6 col-md-3" style="position: absolute">
-    <form class="form-container">
-        <div class="form-group">
-            <label>Tên</label>
-            <input type="text" class="form-control " placeholder="Nhập tên">
-        </div>
-        <div class="form-group ">
-            <label>Số điện thoại</label>
-            <input type="number" class="form-control" placeholder="Nhập số điện thoại">
-        </div>
-        <div class="form-group ">
-            <label>Địa chỉ</label>
-            <input type="text" class="form-control" placeholder="Nhập địa chỉ">
-        </div>
-        <div class="form-group ">
-            <label>Ghi chú</label>
-            <input type="text" class="form-control">
-        </div>
-        <div class="form-inline" style="margin-left: 250px;">
+<div class="container mt-5">
+    <section class="col-12 col-sm-6 col-md-3" style="position: absolute">
+        <form class="form-container">
             <div class="form-group">
-                <input type="submit" value="Hủy" style="background-color: #ABBEAB;" class="btn  btn-lg" /></center>
+                <label>Tên</label>
+                <input type="text" class="form-control " placeholder="Nhập tên">
             </div>
-            <div class="form-group">
-                <input type="submit" value="Hoàn tất" class="btn btn-lg" />
+            <div class="form-group ">
+                <label>Số điện thoại</label>
+                <input type="number" class="form-control" placeholder="Nhập số điện thoại">
             </div>
-        </div>
-    </form>
-</section>
+            <div class="form-group ">
+                <label>Địa chỉ</label>
+                <input type="text" class="form-control" placeholder="Nhập địa chỉ">
+            </div>
+            <div class="form-group ">
+                <label>Ghi chú</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="form-inline" style="margin-left: 250px;">
+                <div class="form-group">
+                    <input type="submit" value="Hủy" style="background-color: #ABBEAB;" class="btn  btn-lg" /></center>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Hoàn tất" class="btn btn-lg" />
+                </div>
+            </div>
+        </form>
+    </section>
+</div>
